RESOLVED FIXED272057
[visionOS] WebContent process crashes when entering docked fullscreen on netflix.com
https://bugs.webkit.org/show_bug.cgi?id=272057
Summary [visionOS] WebContent process crashes when entering docked fullscreen on netf...
Andy Estes
Reported 2024-04-02 14:30:45 PDT
SSIA
Attachments
Andy Estes
Comment 1 2024-04-02 14:30:48 PDT
Andy Estes
Comment 2 2024-04-02 14:35:14 PDT
EWS
Comment 3 2024-04-02 20:15:22 PDT
Committed 276984@main (dc3e748f38f8): <https://commits.webkit.org/276984@main> Reviewed commits have been landed. Closing PR #26752 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.