Cherry-pick dc3e748f38f8. rdar://125742417

[visionOS] WebContent process crashes when entering docked fullscreen on netflix.com
    https://bugs.webkit.org/show_bug.cgi?id=272057
    rdar://125742417

    Reviewed by Jer Noble.

    When entering docked fullscreen on netflix.com, com.apple.WebKit.GPU crashes with the following
    uncaught exception:

    ```
    *** Terminating app due to uncaught exception 'NSInternalInconsistencyException', reason: '*** -[AVContentKeySession addContentKeyRecipient:] cannot add this object as an AVContentKeyRecipient'
    ```

    The proximate cause is that SourceBufferPrivateAVFObjC is passing nil to -addContentKeyRecipient:,
    but since SampleBufferContentKeySessionSupportEnabled is enabled on visionOS this method should not
    even be called; AVSampleBufferAttachContentKey should be called instead.

    This occurs because of a mistake where we only considered extension processes to be eligible for
    AVSampleBufferAttachContentKey. Fixed this by replacing the extension process check with an
    entitlement check.

    * Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
    (WebCore::supportsAttachContentKey):

    Canonical link: https://commits.webkit.org/276984@main